duniverse/menhirLib.20200211/test/static/bad/unclosed-brace-brace.mly
%token A B C
%%
foo: A { {
bar: B { () }
