duniverse/menhirLib.20200211/test/static/bad/unclosed-brace-brace.exp
File "unclosed-brace-brace.mly", line 3, characters 9-9:
Error: unbalanced opening brace.
